# tachorpm

./: README.md  pyproject.toml
data/: matlab_ref_output.csv  test_input.csv
tachorpm/: __init__.py  tachorpm.py
tests/: test_matlab_validation.py  test_tachorpm.py
