[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tachorpm"
version = "0.1.0"
description = "Extract rotational speed from tachometer pulse signals"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Claude", email = "noreply@anthropic.com"}
]
keywords = ["signal processing", "tachometer", "rpm", "vibration analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tachorpm"
Documentation = "https://github.com/yourusername/tachorpm#readme"
Repository = "https://github.com/yourusername/tachorpm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
